Bump dependencies to 1.18.2, added badge for builtin servers, added forced servers (Closes #2), bump version to 2.0-BETA, reduced icon size (Closes #1)